--- a/public/index.html
+++ b/public/index.html
@@ -252,9 +252,12 @@
 					<dl>
 						<dd class="top">News</dd>
 						<dd id="accordion" class="mid ">
-							<div class="news-title ">Congratulations SHPS Grads!</div>
-							<div class="news-data"><p>31 students graduated from Sacred Heart Parish School and are now on their way to high school. This class is the last one to graduate from the old school campus, and embody the qualities of all the
-							former classes who came before them.<br/></p></div>
+							<div class="news-title ">Our 69th annual Fall Festival will take place this year on Saturday, October 2nd, from 11:00am until dusk.</div>
+							<div class="news-data"><p>The chairpersons for this event are Nathan Carnahan, Jimmy Madrigal, Corine Pekari-Buckner, and Sondra Munson.<br/>
+              Raffle tickets are available now at the school office, and at the church after Mass.  <br/>
+              New vendors are being sought for the Arts & Crafts booths.  Contact one of the chairpersons if you are interested.<br/>
+              Water and soda donations would be appreciated.  Please drop off your donation at the school office.
+              <br/></p></div>
 						</dd>
 						<dd class="btm"></dd>
 					</dl>
