--- a/public/shpsholidayhometour.com/old/index.htm
+++ b/public/shpsholidayhometour.com/old/index.htm
@@ -75,7 +75,7 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
         <!-- Begin Footer -->
         <div align="center">
 <p><FONT 
-      color=#ffffff>3933 I Street Sacremento, CA | 916.556.5050 | www.SHPSHolidayHomeTour.com<br>
+      color=#ffffff>856 39th Street Sacremento, CA | 916.556.5050 | www.SHPSHolidayHomeTour.com<br>
             <a href="main.html" target="iframe1">WELCOME</a>&nbsp; ::&nbsp; <A href="tour.htm" 
       target=iframe1></A><a href="tickets.htm" target="iframe1">TICKETS</a>&nbsp; 
             ::&nbsp; <A href="tour.htm" 
