--- a/public/shpsholidayhometour.com/main.html
+++ b/public/shpsholidayhometour.com/main.html
@@ -23,7 +23,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <p align="left"><BR>
             <strong><font size="3">2010 Holiday Home Tour of East Sacramento</font></strong><br>
 			</p>
-            <p>Friday, December 3th: 112 a.m. to 8 p.m.<br>
+            <p>Friday, December 3th: 12 p.m. to 8 p.m.<br>
             Saturday, December 4th: 10 a.m. to 7 p.m.<br>
             Sunday, December 5th: 11 a.m. to 5 p.m.</p>
           <p>  Featuring five beautiful homes in East Sacramento's Fabulous Forties neighborhood. Tickets $25 online until December 2nd, and at our fine retailers until December 3rd.</p>
