--- a/public/shpsholidayhometour.com/tickets.htm
+++ b/public/shpsholidayhometour.com/tickets.htm
@@ -14,27 +14,15 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
   <br><font color="#990000" size="1"><strong>Purchase Tickets in Person! </strong></font></p>
         <P align=left>Tickets will be available November 1st at the following 
           retailers and at the Sacred Heart School office 916-456-1576:</P>
-        <P align=left>Calico Corners<br>
-          1741 Howe Avenue <br>
-          916-927-5002<br>
-          and <br>
-          525 Sunrise Blvd. <br>
-          916-962-0281</P>
         <p>Collected Works<br>
           4524 Freeport Blvd. <br>
           916-737-8188</p>
-        <p>La Maison Marche<br>
-          5379 H Street <br>
-          916-736-1994</p>
         <p>The French Hen<br>
           3200 Folsom Blvd. <br>
           916-452-7494</p>
         <p>Hoshall's Salon &amp; Spa<br>
           6608 Folsom-Auburn Blvd. #4 <br>
           916-987-1995</p>
-        <p>Ivy House<br>
-          5601 H Street <br>
-          916-737-0895</p>
         <p>Pottery World<br>
           4419 Granite Dr, Rocklin<br>
           916-624-8080</p>
@@ -57,7 +45,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
             <B><FONT size=3>Holiday Home Tour Ticket Sales</FONT></B></p>
           <p>Welcome to the Sacred Heart Holiday Home Tour ticket store. We are pleased to announce that we now offer a "surcharge free" <a href="http://insightmethods.com/chintan/sacred_heart_landingpage/site/Index.html" title="Sacred Heart Holiday Home Tour" target="_blank">transaction via PayPal.</a>  </p>
           <p><a href="http://insightmethods.com/chintan/sacred_heart_landingpage/site/Index.html" title="Sacred Heart Holiday Home Tour" target="_blank">Online tickets</a> will be held at will-call for pick up on tour days. On Friday morning only, will-call will be located in the Mercy McMahon Terrace at 3865 J St.  Will call will move to Sacred Heart School, 856 39th Street, 12:30 pm. The Cafe and Gift Shop also open at 12:30 pm at Sacred Heart Parish School. Will call will remain at the school for the rest of the weekend. Purchase Tickets Now!<br>
-            <div class="datatable-div">
+            <div class="datatable-divx">
 				
             	
 				<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -86,17 +74,6 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
             Tickets will be available November 1st at the following retailers and at the Sacred Heart School office 916-456-1576:</p>
           <table width="535" border="0">
             <tr> 
-              <td width="206"><font size="1" face="Verdana, Arial, Helvetica, sans-serif">Calico Corners<br>
-                1741 Howe Avenue <br>
-                916-927-5002<br>
-                </font></td>
-              <td width="37"><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
-              <td width="272"><font size="1" face="Verdana, Arial, Helvetica, sans-serif">Calico 
-                Corners<br>
-                525 Sunrise Blvd. <br>
-                916-962-0281</font></td>
-            </tr>
-            <tr> 
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
@@ -106,22 +83,6 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
                 Works<br>
                 4524 Freeport Blvd. <br>
                 916-737-8188</font></td>
-              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
-              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">Ivy 
-                House<br>
-                5601 H Street <br>
-                916-737-0895</font></td>
-            </tr>
-            <tr> 
-              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
-              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
-              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
-            </tr>
-            <tr> 
-              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">La 
-                Maison Marche<br>
-                5379 H Street <br>
-                916-736-1994</font></td>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">Pottery 
                 World<br>
