[CHANGE] correct email on contact us

--- a/public/contact-us.html
+++ b/public/contact-us.html
@@ -163,7 +163,7 @@
 							<h2>School Counselor</h2>
 							<p>916 456-1576</p>
 							<h2>Contact Our School Office at </h2>
-							<p><a href="mailto:www.lzickefoose@sacredheartschool.net">www.lzickefoose@sacredheartschool.net</a></p>
+							<p><a href="mailto:lzickefoose@sacredheartschool.net">lzickefoose@sacredheartschool.net</a></p>
 						</td>
 						<td width="50"></td>
 						<td valign="top"><div style="width:375px; border:3px solid #ccc;"><iframe width="375" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.co.in/maps?hl=en&amp;client=firefox-a&amp;q=google+map+856+39th+Street,+Sacramento,+CA+95816&amp;ie=UTF8&amp;hq=&amp;hnear=856+39th+St,+Sacramento,+California+95819,+United+States&amp;gl=in&amp;ei=fg-GTNakMcjzcb_awJ4I&amp;ved=0CBoQ8gEwAA&amp;ll=38.577561,-121.451626&amp;spn=0.02684,0.032101&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe></div></td>
