added data as per http://schoolyard.zendesk.com/tickets/1873

--- a/public/index.html
+++ b/public/index.html
@@ -260,6 +260,19 @@
               <br/></p></div>
 						</dd>
 						<dd class="btm"></dd>
+											<dd id="accordion" class="mid ">
+          							<div class="news-title ">Fall Festival <br/>
+                        Saturday, October 2</div>
+          							<div class="news-data"><br/><strong>Schedule of Events </strong>
+          							  
+          							<p>  
+                          11am - Open<br/>
+                          2pm - Lip Sync Competition <br/>
+                          4pm - Hula Hoop Contest (or immediately following Lip Sync)<br/> 
+                          5pm - Dog Party - Live Band<br/>
+                        </p></div>
+          						</dd>
+          						<dd class="btm"></dd>
 					</dl>
 					
 				<!--	<dl>
