[Update] Update Holiday Home Site.

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -40,7 +40,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 			916-441-2303<br>
             <a href="http://www.twiggsfloraldesign.com" target="_blank">www.twiggsfloraldesign.com</a></p>
           <p><em>East Sac Florist</em><br>
-            Phillip Rice<br>
+            Philip Rice<br>
             5379 H Street<br>
             Sacramento, CA 95816<br>
             916-457-2699<br>
