--- a/public/shpsholidayhometour.com/directions.htm
+++ b/public/shpsholidayhometour.com/directions.htm
@@ -19,10 +19,10 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
         <blockquote> 
           <p align="left"><BR>
             <B><FONT size=3>Directions to the Tour</FONT></B></p>
-          <p>The tour starts on 43rd Street between J and M Streets. Look for the posted signs! The tour will wind its way through East Sacramento. You may start the tour at any home, and parking is available outside all the tour homes and at the Holiday Cafe and Gift Shop, located at Sacred Heart Parish School at 856 39th Street. Tickets can be purchased at the School and at the 43rd Street home.</p>
+          <p>The tour starts on 43rd Street between J and M Streets. Look for the posted signs! The tour will wind its way through East Sacramento. You may start the tour at any home, and parking is available outside all the tour homes and at the Holiday Boutique, located at Sacred Heart Parish School at 856 39th Street. Tickets can be purchased at the School and at the 43rd Street home.</p>
           <p><br>
             <strong>From Auburn/Roseville</strong><br>
-            Take the J Street exit off of the Capital City Freeway. Head east (left) to 43rd Street and turn right for house #1. Or turn right on 39th Street for the Cafe and Gift Shop at the school.</p>
+            Take the J Street exit off of the Capital City Freeway. Head east (left) to 43rd Street and turn right for house #1. Or turn right on 39th Street for Boutique at the school.</p>
           <p><br>
             <strong>From Placerville</strong><br>
             Take Highway 50 to the 65th Street exit. Turn right on 65th St., Go one block to Folsom Boulevard and turn left. Go to 43rd  St. and turn right.  Cross over M and it will be on your left.  </p>
