--- a/public/shpsholidayhometour.com/homes.htm
+++ b/public/shpsholidayhometour.com/homes.htm
@@ -14,9 +14,9 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
   <br>	<strong>2010 Homes</strong></p>
 		
 			<P align=left><img src="images/dot_red.JPG" width="9" height="8"> 
-	          <a href="#">Brown Home</a></p>
+	          <a href="#">Classic Prairie</a></p>
 			<P align=left><img src="images/dot_red.JPG" width="9" height="8"> 
-	          <a href="#">Fawamuara Home</a></p>
+	          <a href="#">Colonial Revival</a></p>
 	<P align=left>&nbsp; </p>	
         <strong>2009 Homes</strong></p> <P align=left><img src="images/dot_red.JPG" width="9" height="8"> 
           <a href="homes09/38thstreet.htm">English Cottage</a></p> 
@@ -26,19 +26,19 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           Chateau</a></p> 
         <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="homes09/42ndstreet.htm">Grand 
           Bungalow </a></p> 
-        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="45thstreet.htm"> 
+        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="homes09/45thstreet.htm"> 
           French Eclectic</a></p> 
         <P align=left>&nbsp; </p>
         <p><strong>2008 Homes</strong></p>
-        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="homes/CraftsmanBungalow.htm">Craftsman 
+        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="#">Craftsman 
           Bungalow</a></p>
-        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="homes/ComfortableContempory.htm">Comfortable 
+        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="#">Comfortable 
           Contempory</a></p>
-        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="homes/EuropeanRevival.htm">European 
+        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="#">European 
           Revival</a></p>
-        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="GeorgianColonial.htm">Federalist 
+        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="#">Federalist 
           Colonial</a></p>
-        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="homes/SpanishEclectic.htm">Spanish 
+        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="#">Spanish 
           Eclectic</a></p>
         <P align=center>&nbsp;</p></TD>
       <TD class=bodytext vAlign=top width=594>
