--- a/public/shpsholidayhometour.com/index.htm
+++ b/public/shpsholidayhometour.com/index.htm
@@ -52,7 +52,7 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
                     <area shape="rect" coords="285,233,380,270" href="directions.htm" target="iframe1">
                     <area shape="rect" coords="398,233,459,272" href="homes.htm" target="iframe1">
                     <area shape="rect" coords="469,233,559,270" href="designers.htm" target="iframe1">
-                    <area shape="rect" coords="679,232,795,254" href="sacredheart.htm" target="iframe1">
+                    <area shape="rect" coords="679,232,795,254" href="http://sacredheartschool.net/" target="_blank">
                   </MAP>
                   <IMG height=254 
             src="images/banner_main10.jpg" width=799 useMap=#FPMap0 
@@ -84,8 +84,8 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
       href="homes.htm" 
       target=iframe1>HOMES</A>&nbsp; ::&nbsp; <A 
       href="designers.htm" 
-      target=iframe1>DESIGNERS</A>&nbsp; ::&nbsp; SPONSORS&nbsp;&nbsp;::&nbsp;&nbsp;<A href="sacredheart.htm" 
-      target=iframe1>SACRED HEART</A></FONT><FONT color=#efead9><B><A 
+      target=iframe1>DESIGNERS</A>&nbsp; ::&nbsp; SPONSORS&nbsp;&nbsp;::&nbsp;&nbsp;<A href="http://sacredheartschool.net/" 
+      target="_blank">SACRED HEART</A></FONT><FONT color=#efead9><B><A 
       href="http://www.premiere-ca.com/agent_login.asp" target=iframe1><br>
             </A></B></font><FONT color=#ffffff> 
             <!-- End Footer -->
