--- a/public/shpsholidayhometour.com/main.html
+++ b/public/shpsholidayhometour.com/main.html
@@ -11,9 +11,9 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
       <TD class=leftnavtext vAlign=top align=left width=161> 
         <!--Start left nav area -->
         <div align="center"><br><br>
-          <img src="images/home_07.jpg" width="150" height="112"> 
-          <p><img src="images/home_04.jpg" width="150" height="112"></p>
-          <p><img src="images/home_05.jpg" width="150" height="112"> <BR>
+          <img src="images/logo-rich.png" /> 
+          <p><img src="images/logo-moranstanley.png" /></p>
+          <p><img src="images/wells.png" w/> <BR>
           </p>
           </div>
         <P align=center>&nbsp;</P></TD>
@@ -23,13 +23,13 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <p align="left"><BR>
             <strong><font size="3">2010 Holiday Home Tour of East Sacramento</font></strong><br>
 			</p>
-            <p>Friday, December 3th: 12 p.m. to 8 p.m.<br>
+            <p>Friday, December 3rd: 12 p.m. to 8 p.m.<br>
             Saturday, December 4th: 10 a.m. to 7 p.m.<br>
             Sunday, December 5th: 11 a.m. to 5 p.m.</p>
           <p>  Featuring five beautiful homes in East Sacramento's Fabulous Forties neighborhood. Tickets $25 online until December 2nd, and at our fine retailers until December 3rd.</p>
           <p>Join us for the 37th year of our self-guided tour of 5 magnificent homes decorated for the holidays by top interior designers and florists. View the wonderful architecture and experience the creative design ideas of some of the region's most talented designers.</p>
           <p>One of Northern California's most popular walking holiday home tours returns this December, with five elegantly decorated homes in East Sacramento's historic Fabulous Forties neighborhood open for viewing. For 37 years, this popular tour has grown to include nearly 5,000 patrons from throughout northern and central California, Nevada and Oregon. The homes showcase elaborate renovation while preserving historic design, custom interior decoration and design, and the most creative holiday d&eacute;cor. </p>
-          <p>The tour begins on 43nd Street between J and M Streets and winds its way through East Sacramento ending on 38th Street between J and M Streets. You may start at either end for an enjoyable, self-guided walking tour that will take about two hours to complete. You may use your ticket for a one-time admittance to each house any time during the tour weekend. Tickets are. Children over the age of one must have a ticket.</p>
+          <p>The tour begins on 43rd Street between J and M Streets and winds its way through East Sacramento ending on 38th Street between J and M Streets. You may start at either end for an enjoyable, self-guided walking tour that will take about two hours to complete. You may use your ticket for a one-time admittance to each house any time during the tour weekend. Tickets are $25 in advance and $30 the day of the event. Children over the age of one must have a ticket.</p>
           <p>This fundraiser benefits Sacred Heart Parish School, and is organized by the Parents of Sacred Heart School.</p>
           <p>For general questions, please email us at <br/><a href="mailto:shhometour@gmail.com">shhometour@gmail.com</a>
 		  <a href="mailto:shhometour@gmail.com"></a>
