[Add] Add the Sponsor  Logo on main page.

--- a/public/shpsholidayhometour.com/main.html
+++ b/public/shpsholidayhometour.com/main.html
@@ -11,11 +11,13 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
       <TD class=leftnavtext vAlign=top align=left width=161> 
         <!--Start left nav area -->
         <div align="center"><br><br>
-          <img src="images/logo-rich.png" /> 
+          <p><img src="images/logo-rich.png" /></p> 
           <p><img src="images/logo-moranstanley.png" /></p>
-          <p><img src="images/wells.png" w/> <BR>
-          </p>
-          </div>
+          <p><img src="images/wells.png" /></p> 
+          <p><img src="images/eastsac.png"  alt=""></p>
+          <BR>
+          
+        </div>
         <P align=center>&nbsp;</P></TD>
       <TD class=bodytext vAlign=top width=593> 
         <!--Start main content area -->
