http://schoolyard.zendesk.com/tickets/1939

--- a/public/index.html
+++ b/public/index.html
@@ -235,7 +235,7 @@
 						<dd class="top">Pulse</dd>
 						<dd class="mid">
 							<dl>
-								<dd class="col-115"><a href="images/Monthly_Pulse__09_10_.pdf"><img alt="" src="images/icon-pdf.gif" /></a></dd>
+								<dd class="col-115"><a href="images/Pulse.pdf"><img alt="" src="images/icon-pdf.gif" /></a></dd>
 								<dd class="col-160"><p>The Pulse published <br/>twice a month by Sacred<br/> Heart Parish School.<br/> <a href="pulse.pdf">Download Issue</a></p></dd>
 								<dd class="sptr-1"></dd>
 							</dl>
