--- a/public/index.html
+++ b/public/index.html
@@ -236,7 +236,7 @@
 						<dd class="mid">
 							<dl>
 								<dd class="col-115"><a href="images/Pulse.pdf"><img alt="" src="images/icon-pdf.gif" /></a></dd>
-								<dd class="col-160"><p>The Pulse published <br/>twice a month by Sacred<br/> Heart Parish School.<br/> <a href="pulse.pdf">Download Issue</a></p></dd>
+								<dd class="col-160"><p>The Pulse published <br/>twice a month by Sacred<br/> Heart Parish School.<br/> <a href="images/Pulse.pdf">Download Issue</a></p></dd>
 								<dd class="sptr-1"></dd>
 							</dl>
 						</dd>
