[Update]Make changes in Index, designer,Home, ticket pages

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -53,6 +53,12 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <p> <em>Inspired Interiors</em><br>
             Tara Sorensen<br>
             (707) 480-6837</p>
+		  <p>
+			<em>Beyond the Garden Gate</em><br/>
+			Pat Stromberg, Becky Heard and Nancy Storm<br/>
+			1015 Olive Drive, Davis, CA<br/>
+			530-756-6698
+		  </p>	
           </blockquote>
         <P>&nbsp; 
           <!--End main content area -->
