--- a/public/shpsholidayhometour.com/homes.htm
+++ b/public/shpsholidayhometour.com/homes.htm
@@ -14,9 +14,12 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
   <br>	<strong>2010 Homes</strong></p>
 		
 			<P align=left><img src="images/dot_red.JPG" width="9" height="8"> 
-	          <a href="#">Classic Prairie</a></p>
+	          <a href="#">Majestic Prairie</a></p>
 			<P align=left><img src="images/dot_red.JPG" width="9" height="8"> 
 	          <a href="#">Colonial Revival</a></p>
+			<P align=left><img src="images/dot_red.JPG" width="9" height="8"> 
+	          <a href="#" >Classic Contemporary Cottage</a></p>
+			
 	<P align=left>&nbsp; </p>	
         <strong>2009 Homes</strong></p> <P align=left><img src="images/dot_red.JPG" width="9" height="8"> 
           <a href="homes09/38thstreet.htm">English Cottage</a></p> 
@@ -48,6 +51,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
             <B><FONT size=3>Holiday Home Tour </FONT></B></p>
           <p align="left"><img src="images/brown-home.jpg" alt="" /></p>
 		  <p align="left"><img src="images/kawamaura-home.jpg" alt=""/></p>	
+		  <p align="left"><img src="images/katchis_home.jpg" alt=""/></p>	
 		  <p><strong>More images will be added.</strong></p>	
         </blockquote>
         </TD>
