--- a/public/shpsholidayhometour.com/tickets.htm
+++ b/public/shpsholidayhometour.com/tickets.htm
@@ -52,6 +52,47 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 			1000 Mercedes Lane El Dorado Hills, CA 95762<br/>
 			(888) 298-4883
 		</p>
+		
+		<p>
+			Beyond the Garden Gate<br/>
+			1015 Olive Drive, Davis, CA<br/>
+			530-756-6698 
+		</p>
+		
+		<p>
+			Calico Corner<br/>
+			5255 Sunrise Blvd, Fair Oaks, CA 95628<br/>
+			(916) 962-0281
+		</p>
+		<p>
+			French Hen<br/>
+			3200 Folsom Blvd # B, Sacramento, CA 95816<br/>
+			(916) 452-7494
+		</p>
+		
+		<p>
+			Talini's Garden Center &amp; Nursery<br/>
+			5601 Folsom Blvd, Sacramento, CA 95819-4605<br/>
+			(916) 451-8150
+		</p>
+		
+		<p>
+			Emigh Hardware<br/>
+			3555 El Camino Ave, Sacramento, CA 95821-6597<br/>
+			(916) 482-1900
+		</p>
+		
+		<p>
+			Emigh Casual Living<br/>
+			3535 El Camino Avenue, Sacramento CA 95821<br/> 
+			(916) 486-9500
+		</p>
+		
+		<p>
+			Pink House<br/>
+			1462 33rd St, Sacramento, CA 95816-5350<br/>
+			(916) 737-7465
+		</p>
 	
 	  </TD>
       <TD class=bodytext vAlign=top width=589>
@@ -60,7 +101,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <p align="left"><BR>
             <B><FONT size=3>Holiday Home Tour Ticket Sales</FONT></B></p>
           <p>Welcome to the Sacred Heart Holiday Home Tour ticket store. We are pleased to announce that we now offer a "surcharge free" <a href="http://insightmethods.com/chintan/sacred_heart_landingpage/site/Index.html" title="Sacred Heart Holiday Home Tour" target="_blank">transaction via PayPal.</a>  </p>
-          <p><a href="http://insightmethods.com/chintan/sacred_heart_landingpage/site/Index.html" title="Sacred Heart Holiday Home Tour" target="_blank">Online tickets</a> will be held at will-call for pick up on tour days. On Friday morning only, will-call will be located in the Mercy McMahon Terrace at 3865 J St.  Will call will move to Sacred Heart School, 856 39th Street, 12:30 pm. Boutique also open at 12:30 pm at Sacred Heart Parish School. Will call will remain at the school for the rest of the weekend. Purchase Tickets Now!<br>
+          <p><a href="http://insightmethods.com/chintan/sacred_heart_landingpage/site/Index.html" title="Sacred Heart Holiday Home Tour" target="_blank">Online tickets</a> will be held at will-call for pick up on tour days. On Friday morning only, will-call will be located in the Mercy McMahon Terrace at 3865 J St. Will-call will move to Sacred Heart School, at 856 39th Street, at 12:30 pm on Friday.  Will-call will remain at the school through the weekend. The Boutique will open Friday the 3rd at 12:30 pm at Sacred Heart Parish School and from that time mirror regular home tour hours. Purchase Tickets Now!<br>
             <div class="datatable-divx">
 				
             	
@@ -163,6 +204,93 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 				</font>
 			  </td>
             </tr>
+			<tr> 
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+            </tr>
+			<tr> 
+              <td>
+				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+					Beyond the Garden Gate<br/>
+					1015 Olive Drive, Davis, CA<br/>
+					530-756-6698
+				</font>
+			  </td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td>
+				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+					Calico Corner<br/>
+					5255 Sunrise Blvd, Fair Oaks, CA 95628<br/>
+					(916) 962-0281
+				</font>
+			  </td>
+            </tr>
+			<tr> 
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+            </tr>
+			<tr> 
+              <td>
+				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+					French Hen<br/>
+					3200 Folsom Blvd # B, Sacramento, CA 95816<br/>
+					(916) 452-7494
+				</font>
+			  </td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td>
+				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+					Talini's Garden Center &amp; Nursery<br/>
+					5601 Folsom Blvd, Sacramento, CA 95819-4605<br/>
+					(916) 451-8150
+				</font>
+			  </td>
+            </tr>
+			<tr> 
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+            </tr>
+			<tr> 
+              <td>
+				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+					Emigh Hardware<br/>
+					3555 El Camino Ave, Sacramento, CA 95821-6597<br/>
+					(916) 482-1900
+				</font>
+			  </td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td>
+				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+					Emigh Casual Living<br/>
+					3535 El Camino Avenue, Sacramento CA 95821<br/> 
+					(916) 486-9500
+				</font>
+			  </td>
+            </tr>
+			<tr> 
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+            </tr>
+			<tr> 
+              <td>
+				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+					Pink House<br/>
+					1462 33rd St, Sacramento, CA 95816-5350<br/>
+					(916) 737-7465
+				</font>
+			  </td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td>
+				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+					&nbsp;
+				</font>
+			  </td>
+            </tr>
+			
           </table>
           <p>&nbsp; </p>
           </blockquote>
