--- a/public/shpsholidayhometour.com/main.html
+++ b/public/shpsholidayhometour.com/main.html
@@ -11,10 +11,11 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
       <TD class=leftnavtext vAlign=top align=left width=161> 
         <!--Start left nav area -->
         <div align="center"><br><br>
-          <p><img src="images/logo-rich.png" /></p> 
-          <p><img src="images/logo-moranstanley.png" /></p>
-          <p><img src="images/wells.png" /></p> 
+          <p><img src="images/logo-rich.png"  alt="" /></p> 
+          <p><img src="images/logo-moranstanley.png"  alt="" /></p>
+          <p><img src="images/wells.png"  alt="" /></p> 
           <p><img src="images/eastsac.png"  alt=""></p>
+		  <p><a href="http://www.pacificflatfee.com/" target="_blank"><img src="images/for-sale.png" alt=""></a></p>	
           <BR>
           
         </div>
