[Update]Home tour Site Update create homepages, Spenser page, and its images

--- a/public/shpsholidayhometour.com/homes.htm
+++ b/public/shpsholidayhometour.com/homes.htm
@@ -11,14 +11,16 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
       <TD class=leftnavtext vAlign=top align=left width=160> 
         <!--Start left nav area -->
        <BR> 
-  <br>	<strong>2010 Homes</strong></p>
-		
-			<P align=left><img src="images/dot_red.JPG" width="9" height="8"> 
-	          <a href="#">Majestic Prairie</a></p>
-			<P align=left><img src="images/dot_red.JPG" width="9" height="8"> 
-	          <a href="#">Colonial Revival</a></p>
-			<P align=left><img src="images/dot_red.JPG" width="9" height="8"> 
-	          <a href="#" >Classic Contemporary Cottage</a></p>
+  		<br>	
+			<strong>2010 Homes</strong></p>
+			<p align=left><img src="images/dot_red.JPG" width="9" height="8"> 
+	          <a href="homes10/home1.htm">Majestic Prairie</a></p>
+			<p align=left><img src="images/dot_red.JPG" width="9" height="8"> 
+	          <a href="homes10/home2.htm">Colonial Revival</a></p>
+			<p align=left><img src="images/dot_red.JPG" width="9" height="8"> 
+	          <a href="homes10/home3.htm" >Classic Contemporary &nbsp;&nbsp;&nbsp;&nbsp;Cottage</a></p>
+			<p align=left><img src="images/dot_red.JPG" width="9" height="8">
+			  <a href="homes10/home4.htm" >Convivial Craftsman Cottage</a></p>
 			
 	<P align=left>&nbsp; </p>	
         <strong>2009 Homes</strong></p> <P align=left><img src="images/dot_red.JPG" width="9" height="8"> 
@@ -47,11 +49,32 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
       <TD class=bodytext vAlign=top width=594>
         <!--Start main content area -->
         <blockquote>
+				
           <p align="left"><BR>
             <B><FONT size=3>Holiday Home Tour </FONT></B></p>
-          <p align="left"><img src="images/brown-home.jpg" alt="" /></p>
-		  <p align="left"><img src="images/kawamaura-home.jpg" alt=""/></p>	
-		  <p align="left"><img src="images/katchis_home.jpg" alt=""/></p>	
+			<table cellspacing="0" cellpadding="0" border="0" width="485" class="sponsors">
+				<tr>
+					<td width="230"><a href="homes10/home1.htm"><img src="images/brown-home-sml.jpg"/></a></td>
+					<td width="25">&nbsp;</td>
+					<td width="230"><a href="homes10/home2.htm"><img src="images/kawamaura-home-sml.jpg"/></td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
+					<td>&nbsp;</td>
+					<td>&nbsp;</td>
+				</tr>
+				<tr>
+					<td ><a href="homes10/home3.htm"><img src="images/katchis_home-sml.jpg"/></a></td>
+					<td>&nbsp;</td>
+					<td ><a href="homes10/home4.htm"><img src="images/youker-home-sml.jpg"/></a></td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
+					<td>&nbsp;</td>
+					<td>&nbsp;</td>
+				</tr>
+			</table>
+          	
 		  <p><strong>More images will be added.</strong></p>	
         </blockquote>
         </TD>
