--- a/public/shpsholidayhometour.com/index.htm
+++ b/public/shpsholidayhometour.com/index.htm
@@ -52,6 +52,7 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
                     <area shape="rect" coords="285,233,380,270" href="directions.htm" target="iframe1">
                     <area shape="rect" coords="398,233,459,272" href="homes.htm" target="iframe1">
                     <area shape="rect" coords="469,233,559,270" href="designers.htm" target="iframe1">
+					<area shape="rect" coords="575,233,665,270" href="sponsors.htm" target="iframe1">	
                     <area shape="rect" coords="679,232,795,254" href="http://sacredheartschool.net/" target="_blank">
                   </MAP>
                   <IMG height=254 
