[Change]Change Text on Designer page and Ticket page

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -27,7 +27,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
             4527 Harlin Drive Sacramento, CA 95826<br>
             916.396.7576<br>
             <a href="http://www.holidayhomesacramento.com" target="_blank">www.holidayhomesacramento.com</a></p>
-          <p><em>Haus by David Randall</em><br>
+          <p><em>Haus Home Decor and Specialty Gift</em><br>
             Jonathan Marquardt and Don Garcia<br>
 			5601 H Street<br/>
 			Sacramento, CA 95819<br/>
