--- a/public/shpsholidayhometour.com/tickets.htm
+++ b/public/shpsholidayhometour.com/tickets.htm
@@ -27,7 +27,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           916-987-1995</p>
         
         
-        <p>Haus by David Randall <br>
+        <p>Haus Home Decor and Specialty Gift<br>
           5601 H Street, Sacramento, CA <br>
           916-448-4100 </p>
         <p>East Sacramento 
@@ -157,8 +157,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 	                  6608 Folsom-Auburn Blvd. #4 <br>
 	                  916-987-1995</font></td>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
-              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">Haus 
-                by David Randall <br>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">Haus Home Decor and Specialty Gift<br>
                 5601 H Street, Sacramento, CA <br>
                 916-448-4100 </font></td>
             </tr>
