--- a/public/shpsholidayhometour.com/homes10/home5.htm
+++ b/public/shpsholidayhometour.com/homes10/home5.htm
@@ -13,22 +13,21 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <a href="home1.htm">The Classic Prairie - Brown</a></p>
 		<p align=left><img src="../images/dot_red.JPG" width="9" height="8"> 
           <a href="home2.htm">The Colonial Revival - Kawamura</a></p>
-		<p align=left><img src="../images/dot_green.JPG" width="9" height="8"> 
+		<p align=left><img src="../images/dot_red.JPG" width="9" height="8"> 
           <a href="home3.htm" >The Contemporary Cottage - Katchis</a></p>
 		<p align=left><img src="../images/dot_red.JPG" width="9" height="8">
 		  <a href="home4.htm" >The Craftsman Cottage - Youker</a></p>
-      <p align=left><img src="../images/dot_red.JPG" width="9" height="8">
+      <p align=left><img src="../images/dot_green.JPG" width="9" height="8">
         <a href="home5.htm" >The Quintessential Craftsman - Modell</a></p>
 
-	  </TD>
+      </TD>
       <TD class=bodytext vAlign=top width=594>
         <!--Start main content area -->
         <blockquote> 
           <p align="left"><BR>
-            <B><FONT size=3>The Contemporary Cottage - Katchis</FONT></B></p>
-          <p align="left"><img src="../images/katchis_home.jpg" ></p>
-          <p align="left">&nbsp;</p>
-          <p align="left"><br>
+            <B><FONT size=3>The Quintessential Craftsman - Modell</FONT></B></p>
+          <p align="left"><img src="../images/home5.png" ></p>
+          <p align="left">&nbsp;
           </p>
           </blockquote>
         </TD>
