[Update]Home page and 2010 home pages

--- a/public/shpsholidayhometour.com/homes10/home3.htm
+++ b/public/shpsholidayhometour.com/homes10/home3.htm
@@ -10,23 +10,23 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
   <TR>
     <TD class=leftnavtext vAlign=top align=left width=160><!--Start left nav area --><BR><BR>
         <p align=left><img src="../images/dot_red.JPG" width="9" height="8"> 
-          <a href="home1.htm">The Classic Prairie - Brown</a></p>
+          <a href="home1.htm">The Classic Prairie</a></p>
 		<p align=left><img src="../images/dot_red.JPG" width="9" height="8"> 
-          <a href="home2.htm">The Colonial Revival - Kawamura</a></p>
+          <a href="home2.htm">The Colonial Revival</a></p>
 		<p align=left><img src="../images/dot_green.JPG" width="9" height="8"> 
-          <a href="home3.htm" >The Contemporary Cottage - Katchis</a></p>
+          <a href="home3.htm" >The Contemporary Cottage</a></p>
 		<p align=left><img src="../images/dot_red.JPG" width="9" height="8">
-		  <a href="home4.htm" >The Craftsman Cottage - Youker</a></p>
+		  <a href="home4.htm" >The Craftsman Cottage</a></p>
       <p align=left><img src="../images/dot_red.JPG" width="9" height="8">
-        <a href="home5.htm" >The Quintessential Craftsman - Modell</a></p>
+        <a href="home5.htm" >The Quintessential Craftsman</a></p>
 
 	  </TD>
       <TD class=bodytext vAlign=top width=594>
         <!--Start main content area -->
         <blockquote> 
           <p align="left"><BR>
-            <B><FONT size=3>The Contemporary Cottage - Katchis</FONT></B></p>
-          <p align="left"><img src="../images/katchis_home.jpg" ></p>
+            <B><FONT size=3>The Contemporary Cottage</FONT></B></p>
+          <p align="left"><img src="../images/katchis_home.jpg" alt="The Contemporary Cottage" title="The Contemporary Cottage" ></p>
           <p align="left">&nbsp;</p>
           <p align="left"><br>
           </p>
