[Update]Remove person's name

--- a/public/shpsholidayhometour.com/homes.htm
+++ b/public/shpsholidayhometour.com/homes.htm
@@ -14,15 +14,15 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
   		<br>	
 			<strong>2010 Homes</strong></p>
 			<p align=left><img src="images/dot_red.JPG" width="9" height="8"> 
-	          <a href="homes10/home1.htm">The Classic Prairie <!--  Brown --></a></p>
+	          <a href="homes10/home1.htm">The Classic Prairie</a></p>
 			<p align=left><img src="images/dot_red.JPG" width="9" height="8"> 
-	          <a href="homes10/home2.htm">The Colonial Revival <!--   Kawamura--></a></p>
+	          <a href="homes10/home2.htm">The Colonial Revival </a></p>
 			<p align=left><img src="images/dot_red.JPG" width="9" height="8"> 
-	          <a href="homes10/home3.htm" >The Contemporary Cottage <!--  Katchis--></a></p>
+	          <a href="homes10/home3.htm" >The Contemporary Cottage </a></p>
       <p align=left><img src="images/dot_red.JPG" width="9" height="8">
-        <a href="homes10/home4.htm" >The Craftsman Cottage <!--  Youker--></a></p>
+        <a href="homes10/home4.htm" >The Craftsman Cottage </a></p>
       <p align=left><img src="images/dot_red.JPG" width="9" height="8">
-        <a href="homes10/home5.htm" >The Quintessential Craftsman <!--   Modell--></a></p>
+        <a href="homes10/home5.htm" >The Quintessential Craftsman </a></p>
 			
 	<P align=left>&nbsp; </p>	
         <strong>2009 Homes</strong></p> <P align=left><img src="images/dot_red.JPG" width="9" height="8"> 
