[CHANGE] diff url

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -26,7 +26,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
             Carol Shellenberger &amp; Mary Shaw<br>
             4527 Harlin Drive Sacramento, CA 95826<br>
             916.396.7576<br>
-            <a href="http://www.holidayhomesacramento.com" target="_blank">www.holidayhomesacramento.com</a></p>
+            <a href="http://www.holidayhomedesigns.com" target="_blank">www.holidayhomesacramento.com</a></p>
           <p><em>Haus Home Decor and Specialty Gift</em><br>
             Jonathan Marquardt and Don Garcia<br>
 			5601 H Street<br/>
