[CHANGE] event change

--- a/public/index.html
+++ b/public/index.html
@@ -300,7 +300,8 @@
 								<!-- event start -->
                   <dd class="col-date">Dec<br/><span>03-05</span></dd>
                   <dd class="col-data">
-                    <span>Home Tour!</span><br/><br/><br/>
+                    <span>Home Tour!</span><br/>Holiday Home Tour Boutique and Cafe do not open until 12:30 on Friday,
+                    December 3.<br/>
                   </dd>
                   <dd class="sptr-1"></dd><br/>
                 <!-- event ends -->
