--- a/public/index.html
+++ b/public/index.html
@@ -353,7 +353,8 @@
 								<!-- event start -->
                   <dd class="col-date">Feb <span>28</span><br/>to<br/>Mar <span>07</span></dd>
                   <dd class="col-data">
-                    <span>For prospective kinders</span><br/><br/><br/><br/>
+                    <span>Kindergarten Testing</span><br/>
+                     for prospective kinders<br/><br/><br/>
                   </dd>
                   <dd class="sptr-1"></dd><br/>
                 <!-- event ends -->
