--- a/public/index.html
+++ b/public/index.html
@@ -330,8 +330,8 @@
 								<!-- event start -->
                   <dd class="col-date">May<br/><span>12</span></dd>
                   <dd class="col-data">
-                    <span>May Crowning – kinder Mass, 9:00am in the church</span><br/>
-                    Pep rally – 1:30pm in the gym
+                    <span>May Crowning – kinder Mass, 9:00am in the church</span><br/><br/>
+                    <span>Pep rally – 1:30pm in the gym</span>
                   </dd>
                   <dd class="sptr-1"></dd><br/>
                 <!-- event ends -->
@@ -346,8 +346,8 @@
 								<!-- event start -->
                   <dd class="col-date">May<br/><span>18</span></dd>
                   <dd class="col-data">
-                    <span>8th grade retreat in St. Anthony’s Hall</span><br/>
-                    Student body campaign speeches during a.m. assembly
+                    <span>8th grade retreat in St. Anthony’s Hall</span><br/><br/>
+                    <span>Student body campaign speeches during a.m. assembly</span>
 										
 										
                   </dd>
@@ -390,8 +390,8 @@
                 <!-- event start -->
                   <dd class="col-date">May<br/><span>25-31</span></dd>
                   <dd class="col-data">
-                    <span>Minimum days for 8th grade only</span><br/>
-                    Student council elections<br/>
+                    <span>Minimum days for 8th grade only</span><br/><br/>
+                    <span>Student council elections</span>
                   </dd>
                   <dd class="sptr-1"></dd><br/>
                 <!-- event ends -->
@@ -415,9 +415,9 @@
                 <!-- event start -->
                   <dd class="col-date">Jun<br/><span>01</span></dd>
                   <dd class="col-data">
-                    <span>8th grade Mass – 9:00am in the church</span><br/>
-                    8th grade Brunch – immediately following Mass, in the gym<br/>
-                    8th grade Graduation ceremony – 7:00pm in gym<br/>
+                    <span>8th grade Mass – 9:00am in the church</span><br/><br/>
+                    <span>8th grade Brunch – immediately following Mass, in the gym</span><br/><br/>
+                    <span>8th grade Graduation ceremony – 7:00pm in gym</span>
                   </dd>
                   <dd class="sptr-1"></dd><br/>
                 <!-- event ends -->
@@ -425,8 +425,8 @@
                 <!-- event start -->
                   <dd class="col-date">Jun<br/><span>02</span></dd>
                   <dd class="col-data">
-                    <span>Kinder graduation – 9:00am &amp; 1:00pm in gym </span><br/>
-                    Last hot lunch day<br/>
+                    <span>Kinder graduation – 9:00am &amp; 1:00pm in gym </span><br/><br/>
+                    <span>Last hot lunch day</span>
                   </dd>
                   <dd class="sptr-1"></dd><br/>
                 <!-- event ends -->
