--- a/public/index.html
+++ b/public/index.html
@@ -470,9 +470,9 @@
                 <!-- event ends -->
                 
                 <!-- event start -->
-                  <dd class="col-date">May<br/><span>31-08</span></dd>
+                  <dd class="col-date">May<br/><span>31</span></dd>
                   <dd class="col-data">
-                    <span>Grade Graduation</span><br/><br/>
+                    <span>8th Grade Graduation</span><br/><br/>
                   </dd>
                   <dd class="sptr-1"></dd><br/>
                 <!-- event ends -->
