[Update] Update content for ticket no #2770

--- a/public/about-us-4.html
+++ b/public/about-us-4.html
@@ -206,7 +206,7 @@
 					</tr>
 					<tr>
 						<th >2nd grade</th>
-						<td>Mrs. Lanich</td>
+						<td>Mrs. Mosbrucker</td>
 						<td>Teaching Asst:  Mrs. Wong</td>
 					</tr>
 					<tr>
@@ -221,7 +221,7 @@
 					</tr>
 					<tr>
 						<th >5th grade</th>
-						<td>Mrs. Saenz</td>
+						<td>Mrs. Lanich</td>
 						<td>Teaching Asst:  Ms. Wittle</td>
 					</tr>
 					<tr>
@@ -236,7 +236,7 @@
 					</tr>
 					<tr>
 						<th >8th grade </th>
-						<td>Miss Henning</td>
+						<td>Mr. Keating</td>
 						<td>Teaching Asst:  Mrs. McKnight</td>
 					</tr>
 					<tr>
@@ -261,7 +261,7 @@
 					</tr>
 					<tr>
 						<th >Physical Education/Art</th>
-						<td>Mr. Hultin</td>
+						<td>Mr. Domek</td>
 						<td>&nbsp;</td>
 					</tr>
 					<tr>
