--- a/public/our-faith-6.html
+++ b/public/our-faith-6.html
@@ -159,7 +159,7 @@
 				
 				
 				<h3>Altar Servers</h3>
-				<p>Our school enjoys a strong connection with Sacred Heart Parish.  Many students choose to serve the parish as altar servers.  The altar serving schedule is linked at:</p>
+				<p>Our school enjoys a strong connection with Sacred Heart Parish.  Many students choose to serve the parish as altar servers.  The altar serving schedule is available through <a href="https://sacredheart-sac.schoolyardapp.com/" alt="School Management Software - Schoolyard Login" title="School Management Software - Schoolyard Login" target="_blank">Schoolyard</a> under the “files” tab</p>
 				<p>The contact list is distributed at school for the Sacred Heart School students and via e-mail for the CCD students.  </p>
 				<p>The altar service coordinator is Mrs. Clark.  She can be reached at the school office.</p>
 				<h2>Quick reminders for altar servers </h2>
