--- a/public/index.html
+++ b/public/index.html
@@ -493,7 +493,9 @@
 			</div>
 			
 			<div class="col-299-r " >
-				
+				<div class="box1">
+				  <img alt="" src="images/fall-festival.jpg" />
+				</div>
 				<div class="box1"><img alt="" src="images/wcea-wasc-logo.jpg" /></div>
 			</div>
 			<div class="sptr-1"></div>
