--- a/public/parents-5.html
+++ b/public/parents-5.html
@@ -164,12 +164,12 @@
 				<p>The Fall Festival is a real crowd pleaser.  The old-fashioned neighborhood carnival features food, games, raffles and entertainment.  </p>
 				
 				<p>The Holiday Home Tour is a celebrated event that draws thousands to the “Fabulous 40s” to view homes decked out for the holidays by top decorators.  The Tour is a decades-long tradition and a favorite among families, parishioners and community members. </p>
-				<p>Spring brings the Annual Golf Tournament as well as the Spring Event.  </p>
+				<p>Spring brings the Annual Golf / Tennis Tournament as well as the Crab Feed (aka Spring Event).</p>
 				<ul class="bullet-list1">
-					<li>Fall Festival – October 2, 2010</li>
-					<li>Home Holiday Tour -December 3-5, 2010</li>
-					<li>Crab Feed (Spring Event)–March 12, 2011</li>
-					<li>Golf Tournament- May 14, 2011</li>
+					<li>Fall Festival – October 1, 2011</li>
+					<li>Holiday Home Tour -December 2-4, 2011</li>
+					<li>Crab Feed (Spring Event)–February 11 (tent)</li>
+					<li>Golf/Tennis Tournament- May 11, 2012</li>
 				</ul>
 				
 			</div>
